cc: Correct elastic overscroll synchronization.

The |elastic_overscroll_| was moved to LayerTree in this change
(https://codereview.chromium.org/2183403002), and is being used for
synchronization during commit, but it wasn't deleted from LayerTreeHost
and was incorrectly used when building PropertyTrees and applying the
delta during BeginMainFrame.

BUG=639046
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2259083002
Cr-Commit-Position: refs/heads/master@{#413272}

Former-commit-id: f70f776fa8c14b5d684e39a85766dbef3f6e002a